@@ -1,3 +1,7 @@
+2005-01-23  Johan Dahlin  <johan@gnome.org>
+
+        * newsitems.py (item): PyGTK 2.5.3
+
 2005-02-21  Lorenzo Gil Sanchez  <lgs@sicem.biz>
 
 	* applications.src: added Gazpacho and Sabayon
